2011-07-09  vadim  <vadim@netcitadel.com>

	* ObjectManipulator.cpp (addSubinterfaceSubmenu): see #2562 "Crash
	when making an interface that has subinterfaces a subinterface of
	another interfrace". If an interface has subinterfaces, it should
	not be allowed to become subinterface of another interface.

2011-07-08  vadim  <vadim@netcitadel.com>

	* ObjectManipulator_slots.cpp (makeSubinterface): see #2561 "Add
	context menu to move an interface to be a child of another
	interface". New context menu (submenu) allows user to move an
	interface in the tree to make it a subinterface of another
	interface.

	* parsers/pf.g: see #2556 "PF import: impor of rules referring to
	undefined macros". Importer now records all parser errors in the
	comments of rules where they occurred and marks these rules
	"broken" by coloring them red. Behavior on import of pf.conf file
	with undefined macros is inconsistent at this time: undefined
	macro that appears in a rule where parser expects ip addresses is
	converted to a run-time DNSName object with name "$macro", a
	warning is displayed and rule is marked as "broken". Undefined
	macro in the position of interface name, port name or other
	parameters triggers generic parser error that looks like "Parser
	error: line 26:19: unexpected token: $ext". The rule is marked as
	"broken" and the error is recorded in the comment.

	* PFImporterRun.cpp (substituteMacros): see #2556 "PF import:
	impor of rules referring to undefined macros". Importer displays
	warnings for all undefined macros found in the file, even if there
	are several.

	* objectSignature.cpp: fixes #2559 "Crash on import when at least
	one DynamicGroup object already exists in the object tree."

2011-07-07  Vadim Kurland  <vadim@netcitadel.com>

	* RoutingCompiler.cpp (processNext): see #2191 "Crash when
	compiling a route with table object". Compiler for PF crashed
	when run-time AddressTable object was used in RDst of a routing
	rule.
